crates/pg_syntax/tests/snapshots/postgres_regress/uuid@22.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX guid1_hash  ON guid1 USING HASH  (guid_field);
---
IndexStmt@0..59
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..23 "guid1_hash"
  Whitespace@23..25 "  "
  On@25..27 "ON"
  Whitespace@27..28 " "
  RangeVar@28..33
    Ident@28..33 "guid1"
  Whitespace@33..34 " "
  Using@34..39 "USING"
  Whitespace@39..40 " "
  Ident@40..44 "HASH"
  Whitespace@44..46 "  "
  Ascii40@46..47 "("
  IndexElem@47..57
    Ident@47..57 "guid_field"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

