crates/pg_syntax/tests/snapshots/postgres_regress/uuid@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO guid2(guid_field) VALUES('11111111-1111-1111-1111-111111111111');"
---
InsertStmt@0..77
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..17
    Ident@12..17 "guid2"
  Ascii40@17..18 "("
  ResTarget@18..28
    Ident@18..28 "guid_field"
  Ascii41@28..29 ")"
  Whitespace@29..30 " "
  SelectStmt@30..75
    Values@30..36 "VALUES"
    Ascii40@36..37 "("
    List@37..75
      AConst@37..75
        Sconst@37..75 "'11111111-1111-1111-1 ..."
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

