crates/pg_syntax/tests/snapshots/postgres_regress/uuid@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT COUNT(*) FROM guid1 g1 LEFT JOIN guid2 g2 ON g1.guid_field = g2.guid_field WHERE g2.guid_field IS NULL;
---
SelectStmt@0..110
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "COUNT"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "FROM"
  Whitespace@20..21 " "
  JoinExpr@21..81
    RangeVar@21..29
      Ident@21..26 "guid1"
      Whitespace@26..27 " "
      Alias@27..29
        Ident@27..29 "g1"
    Whitespace@29..30 " "
    Left@30..34 "LEFT"
    Whitespace@34..35 " "
    Join@35..39 "JOIN"
    Whitespace@39..40 " "
    RangeVar@40..48
      Ident@40..45 "guid2"
      Whitespace@45..46 " "
      Alias@46..48
        Ident@46..48 "g2"
    Whitespace@48..49 " "
    On@49..51 "ON"
    Whitespace@51..52 " "
    AExpr@52..81
      ColumnRef@52..65
        Ident@52..54 "g1"
        Ascii46@54..55 "."
        Ident@55..65 "guid_field"
      Whitespace@65..66 " "
      Ascii61@66..67 "="
      Whitespace@67..68 " "
      ColumnRef@68..81
        Ident@68..70 "g2"
        Ascii46@70..71 "."
        Ident@71..81 "guid_field"
  Whitespace@81..82 " "
  Where@82..87 "WHERE"
  Whitespace@87..88 " "
  NullTest@88..109
    ColumnRef@88..101
      Ident@88..90 "g2"
      Ascii46@90..91 "."
      Ident@91..101 "guid_field"
    Whitespace@101..102 " "
    Is@102..104 "IS"
    Whitespace@104..105 " "
    NullP@105..109 "NULL"
  Ascii59@109..110 ";"

