crates/pg_syntax/tests/snapshots/postgres_regress/uuid@34.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: INSERT INTO guid1 (guid_field) VALUES (gen_random_uuid());
---
InsertStmt@0..58
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..17
    Ident@12..17 "guid1"
  Whitespace@17..18 " "
  Ascii40@18..19 "("
  ResTarget@19..29
    Ident@19..29 "guid_field"
  Ascii41@29..30 ")"
  Whitespace@30..31 " "
  SelectStmt@31..54
    Values@31..37 "VALUES"
    Whitespace@37..38 " "
    Ascii40@38..39 "("
    List@39..54
      FuncCall@39..54
        Ident@39..54 "gen_random_uuid"
  Ascii40@54..55 "("
  Ascii41@55..56 ")"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

