crates/pg_syntax/tests/snapshots/postgres_regress/uuid@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO guid1(guid_field) VALUES('{22222222-2222-2222-2222-222222222222 ');"
---
InsertStmt@0..79
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..17
    Ident@12..17 "guid1"
  Ascii40@17..18 "("
  ResTarget@18..28
    Ident@18..28 "guid_field"
  Ascii41@28..29 ")"
  Whitespace@29..30 " "
  SelectStmt@30..77
    Values@30..36 "VALUES"
    Ascii40@36..37 "("
    List@37..77
      AConst@37..77
        Sconst@37..77 "'{22222222-2222-2222- ..."
  Ascii41@77..78 ")"
  Ascii59@78..79 ";"

