crates/pg_syntax/tests/snapshots/postgres_regress/vacuum_parallel@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SET min_parallel_index_scan_size TO '128kB';"
---
VariableSetStmt@0..44
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..32 "min_parallel_index_sc ..."
  Whitespace@32..33 " "
  To@33..35 "TO"
  Whitespace@35..36 " "
  AConst@36..43
    Sconst@36..43 "'128kB'"
  Ascii59@43..44 ";"

